@@ -267,7 +267,7 @@ public class HiveIcebergOutputCommitter extends OutputCommitter {
         .map(TezUtil::enrichContextWithVertexId)
         .collect(Collectors.toList());
     Multimap<OutputTable, JobContext> outputs = collectOutputs(jobContextList);
-    JobConf jobConf = jobContextList.getFirst().getJobConf();
+    JobConf jobConf = jobContextList.get(0).getJobConf();
     long startTime = System.currentTimeMillis();
 
     String ids = jobContextList.stream()
@@ -275,24 +275,30 @@ public class HiveIcebergOutputCommitter extends OutputCommitter {
     LOG.info("Committing job(s) {} has started", ids);
 
     Collection<String> jobLocations = new ConcurrentLinkedQueue<>();
-    try (ExecutorService fileExecutor = fileExecutor(jobConf);
-         ExecutorService tableExecutor = tableExecutor(jobConf, outputs.keySet().size())) {
+    ExecutorService fileExecutor = fileExecutor(jobConf);
+    ExecutorService tableExecutor = tableExecutor(jobConf, outputs.keySet().size());
+    try {
       // Commits the changes for the output tables in parallel
       Tasks.foreach(outputs.keySet())
-          .throwFailureWhenFinished()
-          .stopOnFailure()
-          .executeWith(tableExecutor)
-          .run(output -> {
-            final Collection<JobContext> jobContexts = outputs.get(output);
-            final Table table = output.table;
-            jobContexts.forEach(jobContext -> jobLocations.add(
-                generateJobLocation(table.location(), jobConf, jobContext.getJobID()))
-            );
-            commitTable(table.io(), fileExecutor, output, jobContexts, operation);
-          });
+              .throwFailureWhenFinished()
+              .stopOnFailure()
+              .executeWith(tableExecutor)
+              .run(output -> {
+                final Collection<JobContext> jobContexts = outputs.get(output);
+                final Table table = output.table;
+                jobContexts.forEach(jobContext -> jobLocations.add(
+                        generateJobLocation(table.location(), jobConf, jobContext.getJobID()))
+                );
+                commitTable(table.io(), fileExecutor, output, jobContexts, operation);
+              });
 
       // Cleanup any merge input files.
       cleanMergeTaskInputFiles(jobContextList, fileExecutor);
+    } finally {
+      fileExecutor.shutdown();
+      if (tableExecutor != null) {
+        tableExecutor.shutdown();
+      }
     }
 
     LOG.info("Commit took {} ms for job(s) {}", System.currentTimeMillis() - startTime, ids);
@@ -338,7 +344,7 @@ public class HiveIcebergOutputCommitter extends OutputCommitter {
         .map(TezUtil::enrichContextWithVertexId)
         .collect(Collectors.toList());
     Multimap<OutputTable, JobContext> outputs = collectOutputs(jobContextList);
-    JobConf jobConf = jobContextList.getFirst().getJobConf();
+    JobConf jobConf = jobContextList.get(0).getJobConf();
 
     String ids = jobContextList.stream()
         .map(jobContext -> jobContext.getJobID().toString()).collect(Collectors.joining(","));
@@ -830,46 +836,52 @@ public class HiveIcebergOutputCommitter extends OutputCommitter {
    */
   public static List<FileStatus> getOutputFiles(List<JobContext> jobContexts) throws IOException {
     Multimap<OutputTable, JobContext> outputs = collectOutputs(jobContexts);
-    JobConf jobConf = jobContexts.getFirst().getJobConf();
+    JobConf jobConf = jobContexts.get(0).getJobConf();
 
     Map<Path, List<FileStatus>> parentDirToDataFile = Maps.newConcurrentMap();
     Map<Path, List<FileStatus>> parentDirToDeleteFile = Maps.newConcurrentMap();
 
-    try (ExecutorService fileExecutor = fileExecutor(jobConf);
-         ExecutorService tableExecutor = tableExecutor(jobConf, outputs.keySet().size())) {
+    ExecutorService fileExecutor = fileExecutor(jobConf);
+    ExecutorService tableExecutor = tableExecutor(jobConf, outputs.keySet().size());
 
+    try {
       Tasks.foreach(outputs.keySet())
-          .suppressFailureWhenFinished()
-          .executeWith(tableExecutor)
-          .onFailure((output, ex) -> LOG.warn("Failed to retrieve merge input file for the table {}", output, ex))
-          .run(output -> {
-            for (JobContext jobContext : outputs.get(output)) {
-              Table table = output.table;
-              FileSystem fileSystem = new Path(table.location()).getFileSystem(jobConf);
-              String jobLocation = generateJobLocation(table.location(), jobConf, jobContext.getJobID());
-              // list jobLocation to get number of forCommit files
-              // we do this because map/reduce num in jobConf is unreliable
-              // and we have no access to vertex status info
-              int numTasks = listForCommits(jobConf, jobLocation).size();
-              FilesForCommit results = collectResults(numTasks, fileExecutor, table.location(), jobContext,
-                  table.io(), false);
-              for (DataFile dataFile : results.dataFiles()) {
-                Path filePath = new Path(dataFile.location());
-                parentDirToDataFile.computeIfAbsent(filePath.getParent(), k -> Lists.newArrayList())
-                    .add(fileSystem.getFileStatus(filePath));
-              }
-              for (DeleteFile deleteFile : results.deleteFiles()) {
-                Path filePath = new Path(deleteFile.location());
-                parentDirToDeleteFile.computeIfAbsent(filePath.getParent(), k -> Lists.newArrayList())
-                    .add(fileSystem.getFileStatus(filePath));
-              }
-            }
-          }, IOException.class);
+              .suppressFailureWhenFinished()
+              .executeWith(tableExecutor)
+              .onFailure((output, ex) -> LOG.warn("Failed to retrieve merge input file for the table {}", output, ex))
+              .run(output -> {
+                for (JobContext jobContext : outputs.get(output)) {
+                  Table table = output.table;
+                  FileSystem fileSystem = new Path(table.location()).getFileSystem(jobConf);
+                  String jobLocation = generateJobLocation(table.location(), jobConf, jobContext.getJobID());
+                  // list jobLocation to get number of forCommit files
+                  // we do this because map/reduce num in jobConf is unreliable
+                  // and we have no access to vertex status info
+                  int numTasks = listForCommits(jobConf, jobLocation).size();
+                  FilesForCommit results = collectResults(numTasks, fileExecutor, table.location(), jobContext,
+                          table.io(), false);
+                  for (DataFile dataFile : results.dataFiles()) {
+                    Path filePath = new Path(dataFile.location());
+                    parentDirToDataFile.computeIfAbsent(filePath.getParent(), k -> Lists.newArrayList())
+                            .add(fileSystem.getFileStatus(filePath));
+                  }
+                  for (DeleteFile deleteFile : results.deleteFiles()) {
+                    Path filePath = new Path(deleteFile.location());
+                    parentDirToDeleteFile.computeIfAbsent(filePath.getParent(), k -> Lists.newArrayList())
+                            .add(fileSystem.getFileStatus(filePath));
+                  }
+                }
+              }, IOException.class);
+    } finally {
+      fileExecutor.shutdown();
+      if (tableExecutor != null) {
+        tableExecutor.shutdown();
+      }
     }
     return Stream.of(parentDirToDataFile, parentDirToDeleteFile)
-      .flatMap(files ->
-          files.values().stream().flatMap(List::stream))
-      .collect(Collectors.toList());
+            .flatMap(files ->
+                    files.values().stream().flatMap(List::stream))
+            .collect(Collectors.toList());
   }
 
   /**
@@ -880,12 +892,13 @@ public class HiveIcebergOutputCommitter extends OutputCommitter {
    */
   public static List<ContentFile<?>> getOutputContentFiles(List<JobContext> jobContexts) throws IOException {
     Multimap<OutputTable, JobContext> outputs = collectOutputs(jobContexts);
-    JobConf jobConf = jobContexts.getFirst().getJobConf();
+    JobConf jobConf = jobContexts.get(0).getJobConf();
 
     Collection<ContentFile<?>> files = new ConcurrentLinkedQueue<>();
 
-    try (ExecutorService fileExecutor = fileExecutor(jobConf);
-        ExecutorService tableExecutor = tableExecutor(jobConf, outputs.keySet().size())) {
+    ExecutorService fileExecutor = fileExecutor(jobConf);
+    ExecutorService tableExecutor = tableExecutor(jobConf, outputs.keySet().size());
+    try {
 
       Tasks.foreach(outputs.keySet())
           .suppressFailureWhenFinished()
@@ -905,6 +918,11 @@ public class HiveIcebergOutputCommitter extends OutputCommitter {
               files.addAll(results.deleteFiles());
             }
           }, IOException.class);
+    } finally {
+      fileExecutor.shutdown();
+      if (tableExecutor != null) {
+        tableExecutor.shutdown();
+      }
     }
     return Lists.newArrayList(files);
   }
@@ -923,7 +941,7 @@ public class HiveIcebergOutputCommitter extends OutputCommitter {
         .retry(3)
         .executeWith(fileExecutor)
         .run(path -> {
-          FileSystem fs = path.getFileSystem(jobContexts.getFirst().getJobConf());
+          FileSystem fs = path.getFileSystem(jobContexts.get(0).getJobConf());
           if (fs.exists(path)) {
             fs.delete(path, true);
           }
