@@ -377,8 +377,8 @@ public class HiveIcebergStorageHandler extends DefaultStorageHandler implements 
     if (subExprNodes.removeIf(nodeDesc -> nodeDesc.getCols() != null &&
           nodeDesc.getCols().stream().anyMatch(skipList::contains))) {
       if (subExprNodes.size() == 1) {
-        pushedPredicate = (subExprNodes.getFirst() instanceof ExprNodeGenericFuncDesc) ?
-            subExprNodes.getFirst() : null;
+        pushedPredicate = (subExprNodes.get(0) instanceof ExprNodeGenericFuncDesc) ?
+            subExprNodes.get(0) : null;
       } else if (subExprNodes.isEmpty()) {
         pushedPredicate = null;
       }
@@ -664,7 +664,7 @@ public class HiveIcebergStorageHandler extends DefaultStorageHandler implements 
     ColumnStatistics emptyStats = new ColumnStatistics();
     if (snapshot != null) {
       return IcebergTableUtil.getColStatsPath(table, snapshot.snapshotId())
-        .map(statsPath -> readColStats(table, statsPath, null).getFirst())
+        .map(statsPath -> readColStats(table, statsPath, null).get(0))
         .orElse(emptyStats).getStatsObj();
     }
     return emptyStats.getStatsObj();
@@ -767,7 +767,7 @@ public class HiveIcebergStorageHandler extends DefaultStorageHandler implements 
           .map(statsPath -> readColStats(tbl, statsPath, null))
           .orElse(Collections.emptyList());
 
-      boolean isTblLevel = statsNew.getFirst().getStatsDesc().isIsTblLevel();
+      boolean isTblLevel = statsNew.get(0).getStatsDesc().isIsTblLevel();
       Map<String, ColumnStatistics> oldStatsMap = Maps.newHashMap();
 
       if (!isTblLevel) {
@@ -778,7 +778,7 @@ public class HiveIcebergStorageHandler extends DefaultStorageHandler implements 
       for (ColumnStatistics statsObjNew : statsNew) {
         String partitionKey = statsObjNew.getStatsDesc().getPartName();
         ColumnStatistics statsObjOld = isTblLevel ?
-            statsOld.getFirst() : oldStatsMap.get(partitionKey);
+            statsOld.get(0) : oldStatsMap.get(partitionKey);
 
         if (statsObjOld != null && statsObjOld.getStatsObjSize() != 0 && !statsObjNew.getStatsObj().isEmpty()) {
           MetaStoreServerUtils.mergeColStats(statsObjNew, statsObjOld);
